<?xml version="1.0"?>
<package format="2">
  <name>cps_msgs</name>
  <version>0.0.0</version>
  <description>The cps_msgs package</description>

  <maintainer email="cw.kang@kaist.ac.kr">Cheongwoong Kang</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
